Add test fixtures to integration test

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,5 @@ SERVICES_HUB_AUTH_URL=wss://gqo1oqz055.execute-api.us-west-2.amazonaws.com/dev
 TXL_HUB_TARGET=textile-hub-dev.fleek.co:3006
 TXL_HUB_MA=multiaddressfor
 TXL_THREADS_TARGET=textile-hub-dev.fleek.co:3006
+TXL_USER_KEY=textile_user_key
+TXL_USER_SECRET=textile_user_secret
