--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,3 +19,5 @@ jobs:
         uses: actions/checkout@v2
       - name: Unit Test
         run: go test -race $(go list ./... | grep -v integration_tests)
+      - name: Integration Test
+        run: go test -race ./integration_tests/...
